// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormInputPassword Snapshot capturing Snapshot of FormInputPassword with repeater prop false 1`] = `
<input
  className="form-control "
  id="password"
  name="password"
  onChange={[Function]}
  required={true}
  type="password"
  value=""
/>
`;

exports[`FormInputPassword Snapshot capturing Snapshot of FormInputPassword with repeater prop true 1`] = `
<input
  className="form-control "
  id="passwordRepeater"
  name="passwordRepeater"
  onChange={[Function]}
  required={true}
  type="password"
  value=""
/>
`;
